--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     },
       
     "require": {
-        "phpmailer/phpmailer": "^6.6"
+        "phpmailer/phpmailer": "^6.6",
+        "workerman/workerman": "^4.0"
     }
 }
