--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     },
       
     "require": {
-        "phpmailer/phpmailer": "^6.6",
-        "workerman/workerman": "^4.0"
+        "phpmailer/phpmailer": "^6.6"
     }
 }
